# paid-access-telegram-bot-python

./: .gitignore  README.md  devserver.sh  pyproject.toml  setup.py
DOCS/: callback_message_tempalate.py  callback_template.py
paid_access/: constants.py
paid_access/models/: items.py  promocodes.py  users.py
paid_access/utils/: config.py  database.py
src/: constants.py  main.py  markups.py  setup.py  states.py
src/callbacks/admin/: addPromocode.py  adminPanel.py  items.py  promocodes.py
src/callbacks/user/: adminPanel.py  close.py  items.py
src/language/: ru.py
src/models/: __init__.py  items.py  payments.py  users.py
src/utils/: __init__.py  config.py  database.py
